--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,13 @@
 server:
-  port: "8080"
+  port: '8080'
   collab_weight: 0.5
   content_weight: 0.5
+  timeout_api: 15s
 
 postgres:
-  host: "db"
-  port: "5432"
-  dbname: "postgres"
-  user: "postgres"
-  password: "postgres"
+  host: 'localhost'
+  port: '5432'
+  dbname: 'postgres'
+  user: 'postgres'
+  password: 'postgres'
   timeout: 4s
-
-timeout: 15s
